@@ -18,6 +18,8 @@ PHP                                                                        NEWS
 - OPcache:
   . Fixed bug #80002 (calc free space for new interned string is wrong).
     (t-matsuno)
+  . Fixed bug #79825 (opcache.file_cache causes SIGSEGV when custom opcode
+    handlers changed). (SammyK)
 
 - PDO:
   . Fixed bug #80027 (Terrible performance using $query->fetch on queries with
